# submora

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  compose.yml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-preview.yml  publish-release.yml  release.yml  review.yml  verify.yml
backend/: Cargo.toml
backend/migrations/: 0004_foreign_keys_and_runtime_bounds.sql  0005_minimal_runtime_cleanup.sql
backend/src/: app.rs  cache.rs  config.rs  core.rs  diagnostics.rs  error.rs  lib.rs  main.rs  metrics.rs  security.rs  session.rs  shared.rs  state.rs  subscriptions.rs
backend/src/routes/: auth.rs  public.rs  users.rs
backend/tests/: core_behaviors.rs  integration_flows.rs
docs/: optimization-plan.md
docs/release/: v0.1.0-readiness.md  v0.1.0-release-notes.md
docs/rewrite/: stage-12-quality-and-ops.md  stage-7-security-and-observability.md
frontend/: Cargo.toml
frontend/assets/styles/: base.css  forms.css  layout.css  panels.css  responsive.css  shell.css  tokens.css
frontend/src/: api.rs  messages.rs
frontend/src/components/: shell.rs
frontend/src/components/console/: actions.rs  auth.rs  editor.rs  mod.rs  services.rs  state.rs  users.rs
scripts/: build-misans-subset.sh  e2e-backend.sh  e2e-upstream.mjs
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
web/src/: App.vue  main.ts  styles.css
web/src/api/: auth.ts  client.ts  meta.ts  types.ts  users.ts
(+31 files in other folders)
