[package]
name = "submora"
version = "0.1.1"
edition.workspace = true

[dependencies]
axum.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
time = "0.3"
tokio.workspace = true
tower-http.workspace = true
tower-sessions.workspace = true
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
argon2 = { version = "0.5", features = ["std"] }
scraper = "0.26"
uuid = { version = "1.23", features = ["v4"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
